--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ body {
   border-radius: 10px 0px 0px 10px;
   border: none;
   padding-left: 10px;
-  color: white;
+  color: black;
   outline: none;
 }
 .searchButton{
